--- a/screens/pos.html
+++ b/screens/pos.html
@@ -104,9 +104,9 @@
             </div>
   
             <!-- CASH PANEL (inline; hidden until CASH selected) -->
-            <div id="pos-cash-panel" class="card pos-panel pos-compact" style="display:none">
-              <div class="font-semibold text-lg">Cash Payment</div>
-              <div class="flex items-center gap-3 flex-wrap">
+              <div id="pos-cash-panel" class="card pos-panel pos-compact" style="display:none">
+                <div class="section-title">Cash Payment</div>
+                <div class="flex items-center gap-3 flex-wrap">
                 <div class="pos-field">
                   <label>Total Due</label>
                   <div id="pos-cash-total-txt" class="pos-static pos-w-amount text-right">$0.00</div>
