--- a/screens/pos.html
+++ b/screens/pos.html
@@ -19,15 +19,13 @@
         <div class="section-title">Inventory Search</div>
       </div>
       <div class="flex items-center gap-2 mb-2">
-        <input id="pos-search" class="input w-full" placeholder="+ Misc — or — type to search" />
+        <input id="pos-search" class="input w-full" placeholder="Enter SKU" />
         <button id="pos-search-btn" class="btn btn-primary">Search</button>
         <button id="pos-search-clear" class="btn btn-ghost">Clear</button>
       </div>
 
         <div id="pos-quick-row" class="flex items-center gap-2 mb-3">
           <button id="pos-quick-misc" class="btn btn-sm">+ Misc</button>
-          <span class="text-sm text-muted">— or —</span>
-          <span class="text-xs text-muted">Use the search box to find inventory</span>
         </div>
 
         <div id="pos-results" class="space-y-2 max-h-[60vh] overflow-auto">
