--- a/screens/pos.html
+++ b/screens/pos.html
@@ -194,7 +194,7 @@
     </div> <!-- 👈 CLOSE the outer two-column wrapper -->
 
     <!-- BELOW: Sales list (today/custom) -->
-    <div class="card p-3 mt-3">
+    <div id="pos-sales" class="card p-3 mt-3">
       <div class="flex items-center justify-between mb-2">
         <div class="section-title">Sales (Today / Custom)</div>
         <div class="flex items-center gap-2">
