--- a/screens/pos.html
+++ b/screens/pos.html
@@ -211,7 +211,7 @@
           <colgroup>
             <col style="width:120px" />
             <col style="width:260px" />
-            <col /> <!-- Payment grows but wraps -->
+            <col style="width:40ch" /> <!-- Payment column fixed to ~40 characters -->
             <col style="width:100px" />
             <col style="width:120px" />
             <col style="width:140px" />
