--- a/screens/pos.html
+++ b/screens/pos.html
@@ -207,29 +207,30 @@
         </div>
       </div>
       <div class="overflow-x-auto">
-        <table class="table w-full table-fixed">
-          <colgroup>
-            <col style="width:120px" />
-            <col style="width:260px" />
-            <col style="width:40ch" /> <!-- Payment column fixed to ~40 characters -->
-            <col style="width:100px" />
-            <col style="width:120px" />
-            <col style="width:140px" />
-          </colgroup>
-          <thead>
-            <tr>
-              <th class="text-left">Time</th>
-              <th class="text-left">Sale ID</th>
-              <th class="text-left">Payment</th>
-              <th class="text-left">Total</th>
-              <th class="text-left">Clerk</th>
-              <th class="text-left">Actions</th>
-            </tr>
-          </thead>
-          <tbody id="pos-sales-body">
-            <!-- rows -->
-          </tbody>
-        </table>
+        <div class="table-wrap">
+          <table class="table table-fixed">
+            <colgroup>
+              <col style="width:120px" />
+              <col style="width:260px" />
+              <col style="width:40ch" /> <!-- Payment column fixed to ~40 characters -->
+              <col style="width:100px" />
+              <col style="width:120px" />
+              <col style="width:140px" />
+            </colgroup>
+            <thead>
+              <tr>
+                <th class="text-left">Time</th>
+                <th class="text-left">Sale ID</th>
+                <th class="text-left">Payment</th>
+                <th class="text-left">Total</th>
+                <th class="text-left">Clerk</th>
+                <th class="text-left">Actions</th>
+              </tr>
+            </thead>
+            <tbody id="pos-sales-body">
+              <!-- rows -->
+            </tbody>
+          </table>
       </div>
     </div>
   </div>
