--- a/screens/pos.html
+++ b/screens/pos.html
@@ -214,6 +214,7 @@
               <col style="width:260px" />
               <col style="width:40ch" /> <!-- Payment column fixed to ~40 characters -->
               <col style="width:100px" />
+              <col style="width:120px" />
               <col style="width:140px" />
             </colgroup>
             <thead>
@@ -222,6 +223,7 @@
                 <th class="text-left">Sale ID</th>
                 <th class="text-left">Payment</th>
                 <th class="text-left">Total</th>
+                <th class="text-left">Clerk</th>
                 <th class="text-left">Actions</th>
               </tr>
             </thead>
