--- a/screens/pos.html
+++ b/screens/pos.html
@@ -20,12 +20,12 @@
       </div>
       <div class="flex items-center gap-2 mb-2">
         <input id="pos-search" class="input w-full" placeholder="Enter SKU" />
-        <button id="pos-search-btn" class="btn btn-primary">Search</button>
-        <button id="pos-search-clear" class="btn btn-ghost">Clear</button>
+        <button id="pos-search-btn" class="btn btn-success">Search</button>
+        <button id="pos-search-clear" class="btn btn-danger">Clear</button>
       </div>
 
         <div id="pos-quick-row" class="flex items-center gap-2 mb-3">
-          <button id="pos-quick-misc" class="btn btn-sm">+ Misc</button>
+          <button id="pos-quick-misc" class="btn btn-success btn-sm">+ Misc</button>
         </div>
 
         <div id="pos-results" class="space-y-2 max-h-[60vh] overflow-auto">
@@ -38,7 +38,7 @@
         <div class="flex items-center justify-between mb-2">
           <div class="section-title">Ticket</div>
           <div class="flex items-center gap-2">
-            <button id="pos-ticket-empty" class="btn btn-ghost btn-sm">Empty</button>
+            <button id="pos-ticket-empty" class="btn btn-danger btn-sm">Empty</button>
           </div>
         </div>
 
