--- a/screens/pos.html
+++ b/screens/pos.html
@@ -125,8 +125,8 @@
                   <div><span class="text-muted">Card amount:</span> <span id="pos-valor-amount">$0.00</span></div>
                 </div>
                 <div class="flex gap-2">
-                  <button id="pos-valor-approve" class="btn btn-primary flex-1">Terminal Approved — finalize</button>
-                  <button id="pos-valor-retry" class="btn btn-ghost flex-1">Resend Now/Card Declined/Error — retry</button>
+                  <button id="pos-valor-approve" class="btn btn-success flex-1">Terminal Approved — finalize</button>
+                  <button id="pos-valor-retry" class="btn btn-danger flex-1">Resend Now/Card Declined/Error — retry</button>
                 </div>
               </div>
             </div>
