--- a/screens/inventory-intake.html
+++ b/screens/inventory-intake.html
@@ -189,6 +189,7 @@
       </div>
 
        <div class="actions" style="margin-top:8px">
+          <button class="btn btn-primary btn-sm opacity-60 cursor-not-allowed" id="facebookCreateBtn" disabled title="Available after Active Save & eBay publish finishes">Add to Facebook</button> 
           <button class="btn btn-ghost btn-sm" id="copyTitleBtn" disabled title="Enabled in Phase 2">Copy Title</button>
           <button class="btn btn-ghost btn-sm" id="copySkuBtn" disabled title="Enabled in Phase 2">Copy SKU</button>
           <button class="btn btn-ghost btn-sm" id="copySkuLocationBtn" disabled title="Enabled in Phase 2">Copy SKU + Location</button>
