--- a/screens/inventory-intake.html
+++ b/screens/inventory-intake.html
@@ -202,6 +202,7 @@
       <div class="tabs">
         <div
           id="intakeTabBar"
+          type="button"
           class="tabBar flex gap-2 mb-2"
           role="tablist"
           aria-label="Recent activity tabs"
@@ -219,6 +220,7 @@
 
           <button
             id="tabInventory"
+            type="button"
             class="btn btn-ghost btn-sm"
             role="tab"
             aria-selected="false"
@@ -230,6 +232,7 @@
 
           <button
             id="tabBulk"
+            type="button"
             class="btn btn-ghost btn-sm"
             role="tab"
             aria-selected="false"
