--- a/screens/inventory-intake.html
+++ b/screens/inventory-intake.html
@@ -309,6 +309,7 @@
                 src=""
                 alt="Item Image"
                 class="max-h-[70vh] w-full h-auto object-contain bg-base-200 rounded-lg"
+                style="display:block;max-width:100%;height:auto;max-height:70vh;margin:0 auto;"
               />
           
               <div class="flex justify-end mt-3">
