--- a/screens/pos.html
+++ b/screens/pos.html
@@ -158,7 +158,7 @@
             </div>
 
             <!-- anchor: VALOR FORCE-FINALIZE MODAL (inserted) -->
-            <div id="pos-valor-modal" class="modal" style="display:none">
+            <dialog id="pos-valor-modal" class="modal">
               <div class="modal-box max-w-md">
                 <div class="text-lg font-semibold mb-2">Make a Selection…</div>
                 <p class="text-sm mb-3">
@@ -174,7 +174,7 @@
                   <button id="pos-valor-retry" class="btn btn-danger flex-1">Resend Now/Card Declined/Error — retry</button>
                 </div>
               </div>
-            </div>
+           </dialog>
             <!-- /anchor: VALOR FORCE-FINALIZE MODAL -->
           
   
