--- a/screens/pos.html
+++ b/screens/pos.html
@@ -53,11 +53,9 @@
 
       <!-- RIGHT: Ticket -->
       <div class="card p-3">
-        <div class="flex items-center justify-between mb-2">
+        <div class="pos-ticket-header mb-2">
           <div class="section-title">Ticket</div>
-          <div class="flex items-center gap-2">
-            <button id="pos-ticket-empty" class="btn btn-danger btn-sm">Empty</button>
-          </div>
+          <button id="pos-ticket-empty" class="btn btn-danger btn-sm">Empty</button>
         </div>
 
         <!-- Full-width Ticket column: Cart → Totals → Payment row -->
