--- a/screens/pos.html
+++ b/screens/pos.html
@@ -51,9 +51,9 @@
       <div class="card p-3">
         <div class="pos-ticket-header mb-2">
           <div class="section-title">Ticket</div>
-          <div id="pos-quick-row" class="flex items-center gap-2 mb-3">
+          //<div id="pos-quick-row" class="flex items-center gap-2 mb-3">
             <button id="pos-quick-misc" class="btn btn-success btn-sm">+ Misc</button>
-          </div>
+          //</div>
           <button id="pos-ticket-empty" class="btn btn-danger btn-sm">Empty</button>
         </div>
 
