--- a/screens/pos.html
+++ b/screens/pos.html
@@ -54,7 +54,7 @@
           
             <button id="pos-quick-misc" class="btn btn-success btn-sm">+ Misc</button>
          
-          <button id="pos-ticket-empty" class="btn btn-danger btn-sm">Empty</button>
+          <button id="pos-ticket-empty" class="btn btn-danger btn-sm">Clear Ticket</button>
         </div>
 
         <!-- Full-width Ticket column: Cart → Totals → Payment row -->
