--- a/screens/pos.html
+++ b/screens/pos.html
@@ -100,8 +100,8 @@
 
          <!-- Ticket-level Discount -->
         <div id="pos-ticket-discount" class="mt-3 p-2 border rounded">
-          <div class="pos-ticket-discount-row">
-            <div class="pos-ticket-discount-label">Ticket Discount</div>
+          <div class="discount-row">
+            <span class="text-sm text-muted">Ticket Discount</span>
         
             <label class="inline-flex items-center gap-1">
               <input type="radio" name="ticket-discount-mode" value="percent" checked />
