Add second drawer option to the select menu

--- a/screens/drawer.html
+++ b/screens/drawer.html
@@ -33,6 +33,7 @@
     <div class="cd-controls">
       <select id="drawer" class="border rounded px-2 py-1">
         <option value="1">Drawer 1</option>
+        <option value="2">Drawer 2</option>
       </select>
       <select id="period" class="border rounded px-2 py-1">
         <option value="">Select period…</option>
