--- a/screens/drawer.html
+++ b/screens/drawer.html
@@ -106,11 +106,11 @@
     <div class="cd-card">
       <h3 class="font-medium mb-2">Coins</h3>
       <div class="cd-grid">
-        <label class="cd-field"><span>Pennies (¢1)</span><input type="number" id="pennies" class="border rounded px-2 py-1" min="0" step="1"></label>
-        <label class="cd-field"><span>Nickels (¢5)</span><input type="number" id="nickels" class="border rounded px-2 py-1" min="0" step="1"></label>
-        <label class="cd-field"><span>Dimes (¢10)</span><input type="number" id="dimes" class="border rounded px-2 py-1" min="0" step="1"></label>
-        <label class="cd-field"><span>Quarters (¢25)</span><input type="number" id="quarters" class="border rounded px-2 py-1" min="0" step="1"></label>
-        <label class="cd-field"><span>Half-dollars (¢50)</span><input type="number" id="halfdollars" class="border rounded px-2 py-1" min="0" step="1"></label>
+        <label class="cd-field"><span>Pennies (1¢)</span><input type="number" id="pennies" class="border rounded px-2 py-1" min="0" step="1"></label>
+        <label class="cd-field"><span>Nickels (5¢)</span><input type="number" id="nickels" class="border rounded px-2 py-1" min="0" step="1"></label>
+        <label class="cd-field"><span>Dimes (10¢)</span><input type="number" id="dimes" class="border rounded px-2 py-1" min="0" step="1"></label>
+        <label class="cd-field"><span>Quarters (25¢)</span><input type="number" id="quarters" class="border rounded px-2 py-1" min="0" step="1"></label>
+        <label class="cd-field"><span>Half-dollars (50¢)</span><input type="number" id="halfdollars" class="border rounded px-2 py-1" min="0" step="1"></label>
       </div>
       <div class="mt-3 text-right">Coin total: <strong id="coin_total">$0.00</strong></div>
     </div>
