Update header and totals in drawer.html

--- a/screens/drawer.html
+++ b/screens/drawer.html
@@ -97,7 +97,7 @@
 
   <section class="grid grid-cols-1 lg:grid-cols-2 gap-4">
     <div class="cd-card">
-      <h3 class="font-medium mb-2">Coins</h3>
+      <h3 class="font-medium mb-2">Coins & Bills</h3>
       <div class="cd-grid">
         <label class="cd-field"><span>Pennies (1¢)</span><input type="number" id="pennies" class="border rounded px-2 py-1" min="0" step="1"></label>
         <label class="cd-field"><span>Nickels (5¢)</span><input type="number" id="nickels" class="border rounded px-2 py-1" min="0" step="1"></label>
@@ -114,6 +114,7 @@
         <label class="cd-field"><span>$100s</span><input type="number" id="hundreds" class="border rounded px-2 py-1" min="0" step="1"></label>
       </div>
       <div class="mt-3 text-right">Coin total: <strong id="coin_total">$0.00</strong></div>
+      <div class="mt-3 text-right">Bill total: <strong id="bill_total">$0.00</strong></div> 
     </div>
 
     <div class="cd-card">
@@ -121,7 +122,7 @@
       <div class="cd-grid">
         
       </div>
-      <div class="mt-3 text-right">Bill total: <strong id="bill_total">$0.00</strong></div>
+     
     </div>
   </section>
 
