--- a/screens/drawer.html
+++ b/screens/drawer.html
@@ -78,7 +78,7 @@
 <div class="p-2 space-y-3 sm:p-4">
   <header class="flex flex-col sm:flex-row sm:items-end sm:justify-between gap-3">
     <div>
-      <h2 class="text-xl font-semibold">Cash Drawer</h2>
+      <h2 class="text-xl font-semibold">Cash Tracking</h2>
       <p class="opacity-70 text-sm">Record opening/closing counts. Totals update automatically.</p>
     </div>
     <div class="cd-controls">
