--- a/screens/drawer.html
+++ b/screens/drawer.html
@@ -94,12 +94,14 @@
     <div class="cd-card">
       <h3 class="font-medium mb-2">Drawer Counts</h3>
       <p class="opacity-70 text-sm">Record opening/closing counts. Totals update automatically.</p>
-      <select id="period" class="border rounded px-2 py-1">
-        <option value="">Select period…</option>
-        <option value="OPEN">Open</option>
-        <option value="CLOSE">Close</option>
-      </select>
-      <button id="btnLoad" class="btn btn--neutral btn--sm">Load Today</button> 
+      <div class="cd-controls">
+          <select id="period" class="border rounded px-2 py-1">
+           <option value="">Select period…</option>
+           <option value="OPEN">Open</option>
+           <option value="CLOSE">Close</option>
+         </select>
+         <button id="btnLoad" class="btn btn--neutral btn--sm">Load Today</button> 
+      </div>
       <div class="cd-grid">
         <label class="cd-field"><span>Pennies (1¢)</span><input type="number" id="pennies" class="border rounded px-2 py-1" min="0" step="1"></label>
         <label class="cd-field"><span>Nickels (5¢)</span><input type="number" id="nickels" class="border rounded px-2 py-1" min="0" step="1"></label>
