Replace notes textarea with notesCSHMV textarea

--- a/screens/drawer.html
+++ b/screens/drawer.html
@@ -138,8 +138,13 @@
       <h3 class="font-medium mb-2">Cash Movement</h3>
       <section class="cd-card">
        <label class="block mb-2">Notes</label>
-       <textarea id="notes" class="w-full border rounded px-2 py-1" rows="4" placeholder="Any notes…"></textarea>
+       <textarea id="notesCSHMV" class="w-full border rounded px-2 py-1" rows="4" placeholder="Notes are required when making a purchase…"></textarea>
       </section>
+       
+      <div class="cd-actions mt-3">
+         <div id="status" class="opacity-70 text-sm"></div>
+         <button id="btnSave" class="btn btn--success btn--lg" disabled>Save</button>
+      </div> 
      
     </div>
   </section>
