--- a/screens/drawer.html
+++ b/screens/drawer.html
@@ -143,7 +143,7 @@
        
       <div class="cd-actions mt-3">
          <div id="status" class="opacity-70 text-sm"></div>
-         <button id="btnSave" class="btn btn--success btn--lg" disabled>Save</button>
+         <button id="btnSaveCSHMV" class="btn btn--success btn--lg" disabled>Save</button>
       </div> 
      
     </div>
