--- a/screens/drawer.html
+++ b/screens/drawer.html
@@ -140,16 +140,18 @@
       <div class="cd-controls">
           <select id="MoveFrm" class="border rounded px-2 py-1">
            <option value="">Select From Location…</option>
-           <option value="Drawer">Drawer</option>
-           <option value="Safe">Safe</option>
-           <option value="Bank">Bank</option>  
+           <option value="frDrawer1">Drawer 1</option>
+            <option value="frDrawer2">Drawer 2</option>
+           <option value="frSafe">Safe</option>
+           <option value="frBank">Bank</option>  
          </select>
          <select id="MoveTo" class="border rounded px-2 py-1">
            <option value="">Select to Location…</option>
-           <option value="Drawer">Drawer</option>
-           <option value="Safe">Safe</option>
-           <option value="Bank">Bank</option>
-            <option value="Purchase">Purchase</option>  
+           <option value="toDrawer1">Drawer 1</option>
+           <option value="toDrawer2">Drawer 2</option>
+           <option value="toSafe">Safe</option>
+           <option value="toBank">Bank</option>
+            <option value="toPurchase">Purchase</option>  
          </select>
 
          <label class="cd-field"><span>$ Amount</span><input type="number" id="amount" class="border rounded px-2 py-1" min="0" step="1"></label>
