--- a/screens/drawer.html
+++ b/screens/drawer.html
@@ -138,7 +138,7 @@
 
    
     <section class="cd-card">
-        <h3 class="font-medium mb-2">Safe</h3>
+        <h3 class="font-medium mb-2">Safe Counts</h3>
       
         <div class="cd-controls">
           <select id="move_from" class="border rounded px-2 py-1">
