--- a/app.html
+++ b/app.html
@@ -187,7 +187,7 @@
       <h3>Workspace</h3>
       <a href="?page=dashboard" data-page="dashboard">Dashboard</a>
       <a href="?page=pos"       data-page="pos">POS</a>
-      <a href="?page=drawer"       data-page="drawer">Cash Drawer</a>
+      <a href="?page=drawer"       data-page="drawer">Cash Tracking</a>
       <a href="?page=payouts" data-page="payouts">Cash Payouts</a>
       <a href="?page=research"  data-page="research">Item Research</a>
       <a href="?page=inventory" data-page="inventory">Inventory</a>
