--- a/screens/drawer.html
+++ b/screens/drawer.html
@@ -166,7 +166,7 @@
         </div>
       </section>
     <section class="cd-card">
-     <h3 class="font-medium mb-2">Cash Movement</h3>
+     <h3 class="font-medium mb-2">Cash Movement & Payouts</h3>
    
      <div class="cd-controls">
        <select id="move_from" class="border rounded px-2 py-1">
