--- a/screens/drawer.html
+++ b/screens/drawer.html
@@ -139,7 +139,7 @@
         <h3 class="font-medium mb-2">Safe Counts</h3>
       
         <div class="cd-controls">
-          <select id="move_from" class="border rounded px-2 py-1">
+          <select id="safe_period" class="border rounded px-2 py-1">
             <option value="">Select Period…</option>
             <option value="SafeOpen">Open</option>
             <option value="SafeClose">Close</option>
@@ -161,7 +161,7 @@
         </div>
       
         <div class="cd-actions mt-2">
-          <div id="move_status" class="text-sm text-gray-600"></div>
+          <div id="safe_status" class="text-sm text-gray-600"></div>
           <button id="btnMoveSave" class="btn btn--primary">Save</button>
         </div>
       </section>
