--- a/screens/drawer.html
+++ b/screens/drawer.html
@@ -162,7 +162,7 @@
       
         <div class="cd-actions mt-2">
           <div id="safe_status" class="text-sm text-gray-600"></div>
-          <button id="btnMoveSave" class="btn btn--primary">Save</button>
+          <button id="btnSafeSave" class="btn btn--primary">Save</button>
         </div>
       </section>
     <section class="cd-card">
