--- a/screens/drawer.html
+++ b/screens/drawer.html
@@ -141,8 +141,8 @@
         <div class="cd-controls">
           <select id="safe_period" class="border rounded px-2 py-1">
             <option value="">Select Period…</option>
-            <option value="SafeOpen">Open</option>
-            <option value="SafeClose">Close</option>
+            <option value="SafeOpen">OPEN</option>
+            <option value="SafeClose">CLOSE</option>
           </select>
       
           <div class="flex items-center gap-2">
