--- a/screens/drawer.html
+++ b/screens/drawer.html
@@ -143,7 +143,14 @@
 
    
     <section class="cd-card">
-        <h3 class="font-medium mb-2">Safe Counts</h3>
+        <div class="flex items-start justify-between gap-3 mb-2">
+           <div>
+             <h3 class="font-medium">Safe Counts</h3>
+             <div id="safe_last_saved" class="text-xs text-gray-600 mt-0.5"></div>
+           </div>
+           <button id="btnSafeHistory" class="btn btn--neutral btn--sm">History</button>
+         </div>
+
       
         <div class="cd-controls">
           <select id="safe_period" class="border rounded px-2 py-1">
@@ -173,7 +180,14 @@
         </div>
       </section>
     <section class="cd-card">
-     <h3 class="font-medium mb-2">Cash Movement & Payouts</h3>
+     <div class="flex items-start justify-between gap-3 mb-2">
+        <div>
+          <h3 class="font-medium">Cash Movement & Payouts</h3>
+          <div id="move_last_saved" class="text-xs text-gray-600 mt-0.5"></div>
+        </div>
+        <button id="btnMoveHistory" class="btn btn--neutral btn--sm">History</button>
+      </div>
+
    
      <div class="cd-controls">
        <select id="move_from" class="border rounded px-2 py-1">
@@ -215,6 +229,43 @@
    </section>
 
    </section>
+
+   <!-- History Modal (reusable) -->
+   <div id="historyModal" class="fixed inset-0 z-50 hidden">
+     <div class="absolute inset-0 bg-black/40" id="historyBackdrop"></div>
+   
+     <div class="absolute inset-0 flex items-center justify-center p-3">
+       <div class="bg-white w-full max-w-3xl rounded-2xl shadow-xl overflow-hidden">
+         <div class="flex items-center justify-between px-4 py-3 border-b">
+           <div>
+             <h3 id="historyTitle" class="font-semibold text-lg">History</h3>
+             <div id="historySubtitle" class="text-xs text-gray-600"></div>
+           </div>
+           <button id="btnCloseHistory" class="btn btn--neutral btn--sm">Close</button>
+         </div>
+   
+         <div class="p-4">
+           <div id="historyLoading" class="text-sm text-gray-600 hidden">Loading…</div>
+           <div id="historyEmpty" class="text-sm text-gray-600 hidden">No records found.</div>
+   
+           <div class="overflow-auto max-h-[70vh]">
+             <table class="table w-full text-sm">
+               <thead>
+                 <tr class="border-b">
+                   <th class="px-3 py-2 text-left font-medium">Date</th>
+                   <th class="px-3 py-2 text-left font-medium">Details</th>
+                   <th class="px-3 py-2 text-left font-medium">Amount</th>
+                 </tr>
+               </thead>
+               <tbody id="historyRows"></tbody>
+             </table>
+           </div>
+         </div>
+       </div>
+     </div>
+   </div>
+
+   
 </div> 
     
   
