--- a/app.html
+++ b/app.html
@@ -193,7 +193,7 @@
       <a href="?page=intake"  data-page="intake">Inventory Intake</a>
       <a href="?page=estimateDropFrm" data-page="estimateDropFrm">Drop Off Form</a>
       <a href="?page=estimates" data-page="estimates">Estimates/Buy Tickets</a>
-      <a href="?page=time" data-page="time">Timekeeping</a>
+      <a href="?page=timesheet" data-page="time">Timekeeping</a>
       <h3>Admin</h3>
       <a href="?page=settings" data-page="settings">Settings</a>
     </nav>
