Add sales list section with date filters

--- a/screens/pos.html
+++ b/screens/pos.html
@@ -313,5 +313,45 @@
           </table>
       </div>
     </div>
+
+    
+    <!-- BELOW: Sales list (today/custom) -->
+    <div id="pos-sales" class="card p-3 mt-3">
+      <div class="flex items-center justify-between mb-2">
+        <div class="section-title">Sales (Today / Custom)</div>
+        <div class="flex items-center gap-2">
+            <button id="pos-sales-today" class="btn btn-sm">Today</button>
+          <span class="text-sm">or</span>
+          <input id="pos-date-from" type="date" class="input input-sm" />
+          <span class="text-sm">to</span>
+          <input id="pos-date-to" type="date" class="input input-sm" />
+          <button id="pos-sales-load" class="btn btn-sm btn-primary">Load</button>
+        </div>
+      </div>
+      <div class="overflow-x-auto">
+        <div class="table-wrap">
+          <table class="table table-fixed">
+            <colgroup>
+              <col style="width:120px" />
+              <col style="width:260px" />
+              <col style="width:40ch" /> <!-- Payment column fixed to ~40 characters -->
+              <col style="width:100px" />
+              <col style="width:140px" />
+            </colgroup>
+            <thead>
+              <tr>
+                <th class="text-left">Time</th>
+                <th class="text-left">Sale ID</th>
+                <th class="text-left">Payment</th>
+                <th class="text-left">Total</th>
+                <th class="text-left">Actions</th>
+              </tr>
+            </thead>
+            <tbody id="pos-sales-body">
+              <!-- rows -->
+            </tbody>
+          </table>
+      </div>
+    </div>
   </div>
 </div>
