--- a/screens/pos.html
+++ b/screens/pos.html
@@ -275,17 +275,13 @@
       </form>
     </dialog>
 
-    <!-- BELOW: Sales list (today/custom) -->
+    <!-- BELOW: Sales Sku's to delist (today/custom) -->
     <div id="pos-sales" class="card p-3 mt-3">
       <div class="flex items-center justify-between mb-2">
-        <div class="section-title">Sales (Today / Custom)</div>
+        <div class="section-title">SKU's to Delist</div>
         <div class="flex items-center gap-2">
-            <button id="pos-sales-today" class="btn btn-sm">Today</button>
-          <span class="text-sm">or</span>
-          <input id="pos-date-from" type="date" class="input input-sm" />
-          <span class="text-sm">to</span>
-          <input id="pos-date-to" type="date" class="input input-sm" />
-          <button id="pos-sales-load" class="btn btn-sm btn-primary">Load</button>
+            <button id="pos-sales-today" class="btn btn-sm">Refresh</button>
+          
         </div>
       </div>
       <div class="overflow-x-auto">
@@ -300,11 +296,14 @@
             </colgroup>
             <thead>
               <tr>
-                <th class="text-left">Time</th>
+                <th class="text-left">Date</th>
                 <th class="text-left">Sale ID</th>
-                <th class="text-left">Payment</th>
-                <th class="text-left">Total</th>
-                <th class="text-left">Actions</th>
+                <th class="text-left">SKU</th>
+                <th class="text-left">Title</th>
+                <th class="text-left">QTY</th>
+                <th class="text-left">Final Price</th>
+                <th class="text-left">URL</th>
+                <th class="text-left">Action</th>
               </tr>
             </thead>
             <tbody id="pos-sales-body">
