Rename sales div and update tbody ID

--- a/screens/pos.html
+++ b/screens/pos.html
@@ -316,7 +316,7 @@
     </dialog>
 
     <!-- BELOW: Sales to delist -->
-    <div id="pos-sales" class="card p-3 mt-3">
+    <div id="pos-sales-delist" class="card p-3 mt-3">
       <div class="flex items-center justify-between mb-2">
         <div class="section-title">Sales to Delist</div>
         <div class="flex items-center gap-2">
@@ -346,7 +346,7 @@
                 <th class="text-left">Action</th>
               </tr>
             </thead>
-            <tbody id="pos-sales-body">
+            <tbody id="pos-sales-delist-body">
               <!-- rows -->
             </tbody>
           </table>
