--- a/screens/pos.html
+++ b/screens/pos.html
@@ -65,6 +65,15 @@
           <div class="section-title">Ticket</div>
           
             <button id="pos-quick-misc" class="btn btn-success btn-sm">+ Misc</button>
+
+            <div id="pos-quick-misc-prices" class="flex flex-wrap gap-1 items-center">
+              <button type="button" class="btn btn-ghost btn-sm" data-quick-misc="5">$5</button>
+              <button type="button" class="btn btn-ghost btn-sm" data-quick-misc="10">$10</button>
+              <button type="button" class="btn btn-ghost btn-sm" data-quick-misc="15">$15</button>
+              <button type="button" class="btn btn-ghost btn-sm" data-quick-misc="20">$20</button>
+              <button type="button" class="btn btn-ghost btn-sm" data-quick-misc="25">$25</button>
+              <button type="button" class="btn btn-ghost btn-sm" data-quick-misc="30">$30</button>
+            </div>
          
           <button id="pos-ticket-empty" class="btn btn-danger btn-sm">Clear Ticket</button>
         </div>
