--- a/screens/pos.html
+++ b/screens/pos.html
@@ -67,12 +67,21 @@
             <button id="pos-quick-misc" class="btn btn-success btn-sm">+ Misc</button>
 
             <div id="pos-quick-misc-prices" class="flex flex-wrap gap-1 items-center">
+              <button type="button" class="btn btn-ghost btn-sm" data-quick-misc="1">$1</button>
+              <button type="button" class="btn btn-ghost btn-sm" data-quick-misc="2">$2</button>
+              <button type="button" class="btn btn-ghost btn-sm" data-quick-misc="3">$3</button>
+              <button type="button" class="btn btn-ghost btn-sm" data-quick-misc="4">$4</button>
               <button type="button" class="btn btn-ghost btn-sm" data-quick-misc="5">$5</button>
               <button type="button" class="btn btn-ghost btn-sm" data-quick-misc="10">$10</button>
               <button type="button" class="btn btn-ghost btn-sm" data-quick-misc="15">$15</button>
               <button type="button" class="btn btn-ghost btn-sm" data-quick-misc="20">$20</button>
               <button type="button" class="btn btn-ghost btn-sm" data-quick-misc="25">$25</button>
               <button type="button" class="btn btn-ghost btn-sm" data-quick-misc="30">$30</button>
+              <button type="button" class="btn btn-ghost btn-sm" data-quick-misc="35">$35</button>
+              <button type="button" class="btn btn-ghost btn-sm" data-quick-misc="40">$40</button>
+              <button type="button" class="btn btn-ghost btn-sm" data-quick-misc="45">$45</button>
+              <button type="button" class="btn btn-ghost btn-sm" data-quick-misc="50">$50</button>
+              <button type="button" class="btn btn-ghost btn-sm" data-quick-misc="100">$100</button>
             </div>
          
           <button id="pos-ticket-empty" class="btn btn-danger btn-sm">Clear Ticket</button>
