--- a/screens/pos.html
+++ b/screens/pos.html
@@ -81,6 +81,15 @@
               <button type="button" class="btn btn-ghost btn-sm" data-quick-misc="40">$40</button>
               <button type="button" class="btn btn-ghost btn-sm" data-quick-misc="45">$45</button>
               <button type="button" class="btn btn-ghost btn-sm" data-quick-misc="50">$50</button>
+              <button type="button" class="btn btn-ghost btn-sm" data-quick-misc="55">$55</button>
+              <button type="button" class="btn btn-ghost btn-sm" data-quick-misc="60">$60</button>
+              <button type="button" class="btn btn-ghost btn-sm" data-quick-misc="65">$65</button>
+              <button type="button" class="btn btn-ghost btn-sm" data-quick-misc="70">$65</button>
+              <button type="button" class="btn btn-ghost btn-sm" data-quick-misc="75">$75</button>
+              <button type="button" class="btn btn-ghost btn-sm" data-quick-misc="80">$80</button>
+              <button type="button" class="btn btn-ghost btn-sm" data-quick-misc="85">$85</button>
+              <button type="button" class="btn btn-ghost btn-sm" data-quick-misc="90">$90</button>
+              <button type="button" class="btn btn-ghost btn-sm" data-quick-misc="95">$95</button>
               <button type="button" class="btn btn-ghost btn-sm" data-quick-misc="100">$100</button>
             </div>
          
