--- a/screens/inventory-intake.html
+++ b/screens/inventory-intake.html
@@ -259,6 +259,7 @@
             <thead>
               <tr>
                 <th>Saved</th>
+                <th>SKU</th>
                 <th>Title</th>
                 <th>Price</th>
                 <th>Quantity</th>
