--- a/screens/inventory-intake.html
+++ b/screens/inventory-intake.html
@@ -301,25 +301,28 @@
             </thead>
             <tbody id="recentInventoryTbody"></tbody>
           </table>
-          <!-- Inventory Image Viewer -->
-          <dialog id="inventoryImageViewer" class="rounded-2xl p-0">
-            <form method="dialog" class="p-3 w-[90vw] max-w-xl">
-              <h3 class="sectionTitle mb-2">Image Preview</h3>
-          
-              <img
-                id="inventoryImageViewerImg"
-                src=""
-                alt="Item Image"
-                class="max-h-[70vh] w-full h-auto object-contain bg-base-200 rounded-lg"
-                style="display:block;max-width:100%;height:auto;max-height:70vh;margin:0 auto;"
-              />
-          
-              <div class="flex justify-end mt-3">
-                <button class="btn btn-ghost btn-sm" type="submit">Close</button>
-              </div>
-            </form>
-          </dialog>
+          <!-- Inventory Image Viewer (moved below so Drafts can use it too) -->
         </section>
+
+        <!-- Shared Image Viewer (used by BOTH Recent Drafts + Active Inventory) -->
+        <dialog id="inventoryImageViewer" class="rounded-2xl p-0">
+          <form method="dialog" class="p-3 w-[90vw] max-w-xl">
+            <h3 class="sectionTitle mb-2">Image Preview</h3>
+
+            <img
+              id="inventoryImageViewerImg"
+              src=""
+              alt="Item Image"
+              class="max-h-[70vh] w-full h-auto object-contain bg-base-200 rounded-lg"
+              style="display:block;max-width:100%;height:auto;max-height:70vh;margin:0 auto;"
+            />
+
+            <div class="flex justify-end mt-3">
+              <button class="btn btn-ghost btn-sm" type="submit">Close</button>
+            </div>
+          </form>
+        </dialog>
+
 
         <!-- Bulk Entry pane (placeholder) -->
         <section
