--- a/screens/inventory.html
+++ b/screens/inventory.html
@@ -57,3 +57,22 @@
     </div>
   </form>
 </dialog>
+
+<!-- Shared Inventory Image Viewer (matches POS) -->
+<dialog id="inventoryImageViewer" class="rounded-2xl p-0">
+  <form method="dialog" class="p-3 w-[90vw] max-w-xl">
+    <h3 class="section-title mb-2">Image Preview</h3>
+
+    <img
+      id="inventoryImageViewerImg"
+      src=""
+      alt="Item Image"
+      class="max-h-[70vh] w-full h-auto object-contain bg-base-200 rounded-lg"
+      style="display:block;max-width:100%;height:auto;max-height:70vh;margin:0 auto;"
+    />
+
+    <div class="flex justify-end mt-3">
+      <button class="btn btn-ghost btn-sm" type="submit">Close</button>
+    </div>
+  </form>
+</dialog>
