--- a/screens/inventory.html
+++ b/screens/inventory.html
@@ -58,20 +58,34 @@
   </form>
 </dialog>
 
-<!-- Shared Inventory Image Viewer (matches POS) -->
+<!-- Inventory Image Viewer (gallery) -->
 <dialog id="inventoryImageViewer" class="rounded-2xl p-0">
-  <form method="dialog" class="p-3 w-[90vw] max-w-xl">
-    <h3 class="section-title mb-2">Image Preview</h3>
+  <form method="dialog" class="p-3 w-[90vw] max-w-xl" style="padding:12px;">
+    <div style="display:flex; align-items:center; justify-content:space-between; gap:10px; margin-bottom:8px;">
+      <h3 class="section-title" style="margin:0;">Image Preview</h3>
+      <div id="inventoryImageViewerCount" style="font-size:12px; opacity:.75;">—</div>
+    </div>
 
-    <img
-      id="inventoryImageViewerImg"
-      src=""
-      alt="Item Image"
-      class="max-h-[70vh] w-full h-auto object-contain bg-base-200 rounded-lg"
-      style="display:block;max-width:100%;height:auto;max-height:70vh;margin:0 auto;"
-    />
+    <div style="display:flex; align-items:center; gap:8px;">
+      <button id="inventoryImagePrev" type="button" class="btn btn-sm" aria-label="Previous image">←</button>
 
-    <div class="flex justify-end mt-3">
+      <img
+        id="inventoryImageViewerImg"
+        src=""
+        alt="Item Image"
+        style="display:block;max-width:100%;height:auto;max-height:70vh;margin:0 auto;flex:1 1 auto;object-fit:contain;background:#f3f4f6;border-radius:10px;"
+      />
+
+      <button id="inventoryImageNext" type="button" class="btn btn-sm" aria-label="Next image">→</button>
+    </div>
+
+    <div
+      id="inventoryImageViewerThumbs"
+      style="margin-top:10px; display:flex; gap:8px; overflow:auto; padding-bottom:6px;"
+      aria-label="Image thumbnails"
+    ></div>
+
+    <div style="display:flex; justify-content:flex-end; margin-top:10px;">
       <button class="btn btn-ghost btn-sm" type="submit">Close</button>
     </div>
   </form>
