--- a/screens/inventory.html
+++ b/screens/inventory.html
@@ -66,17 +66,44 @@
       <div id="inventoryImageViewerCount" style="font-size:12px; opacity:.75;">—</div>
     </div>
 
-    <div style="display:flex; align-items:center; gap:8px;">
-      <button id="inventoryImagePrev" type="button" class="btn btn-sm" aria-label="Previous image">←</button>
-
+    <div style="position:relative; width:100%;">
       <img
         id="inventoryImageViewerImg"
         src=""
         alt="Item Image"
-        style="display:block;max-width:100%;height:auto;max-height:70vh;margin:0 auto;flex:1 1 auto;object-fit:contain;background:#f3f4f6;border-radius:10px;"
+        style="display:block;width:100%;max-width:100%;height:auto;max-height:70vh;margin:0 auto;object-fit:contain;background:#f3f4f6;border-radius:10px;"
       />
 
-      <button id="inventoryImageNext" type="button" class="btn btn-sm" aria-label="Next image">→</button>
+      <!-- Big, obvious tap targets (mobile-friendly) -->
+      <button
+        id="inventoryImagePrev"
+        type="button"
+        aria-label="Previous image"
+        style="
+          position:absolute; left:10px; top:50%; transform:translateY(-50%);
+          width:48px; height:48px; border-radius:999px;
+          display:flex; align-items:center; justify-content:center;
+          font-size:22px; font-weight:700;
+          background:rgba(255,255,255,.9); border:1px solid #ddd;
+          box-shadow:0 2px 10px rgba(0,0,0,.12);
+          cursor:pointer; z-index:5;
+        "
+      >‹</button>
+
+      <button
+        id="inventoryImageNext"
+        type="button"
+        aria-label="Next image"
+        style="
+          position:absolute; right:10px; top:50%; transform:translateY(-50%);
+          width:48px; height:48px; border-radius:999px;
+          display:flex; align-items:center; justify-content:center;
+          font-size:22px; font-weight:700;
+          background:rgba(255,255,255,.9); border:1px solid #ddd;
+          box-shadow:0 2px 10px rgba(0,0,0,.12);
+          cursor:pointer; z-index:5;
+        "
+      >›</button>
     </div>
 
     <div
