--- a/screens/inventory-intake.html
+++ b/screens/inventory-intake.html
@@ -54,6 +54,12 @@
       <div class="card">
         <h2 class="sectionTitle">Basic Item Details</h2>
         <div class="legacy-grid-2">
+
+           <div class="field">
+            <label>SKU</label>
+            <input id="SKUInput" type="text" placeholder="System Will Generate This" />
+          </div>
+          
           <div class="field">
             <label>Item Name / Description</label>
             <input id="titleInput" type="text" placeholder="e.g., Monster High Doll - Frankie Stein" />
