--- a/screens/inventory-intake.html
+++ b/screens/inventory-intake.html
@@ -98,7 +98,9 @@
 
           <div class="field">
             <label>SKU</label>
-            <input id="SKUInput" type="text" placeholder="System Will Generate This" />
+            <input id="SKUInput" type="text"
+                   placeholder="System Will Generate This"
+                   readonly />
           </div>
           
         </div>
