Add maxlength attribute to title input field

--- a/screens/inventory-intake.html
+++ b/screens/inventory-intake.html
@@ -57,7 +57,10 @@
 
           <div class="field">
             <label>Item Name / Description</label>
-            <input id="titleInput" type="text" placeholder="e.g., Monster High Doll - Frankie Stein" />
+            <input id="titleInput"
+                   type="text"
+                   maxlength="80"
+                   placeholder="e.g., Monster High Doll - Frankie Stein" />
           </div>
       
           <div class="field">
