--- a/screens/inventory-intake.html
+++ b/screens/inventory-intake.html
@@ -54,13 +54,16 @@
       <div class="card">
         <h2 class="sectionTitle">Basic Item Details</h2>
         <div class="legacy-grid-2">
-
+          
           <div class="field">
-            <label>Item Name / Description</label>
+            <label class="flex justify-between">
+              <span>Item Name / Description</span>
+              <span id="titleCharCounter" class="text-sm text-gray-500">0 / 80</span>
+            </label>
             <input id="titleInput"
                    type="text"
                    maxlength="80"
-                   placeholder="e.g., Monster High Doll - Frankie Stein" />
+                   placeholder="e.g. Monster High Doll - Frankie Stein" />
           </div>
       
           <div class="field">
